force-app/main/default/objects/Account/fields/Estimated_Wallet_Size__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_Size__c</fullName>
    <description>RO-529, RO - 2560</description>
    <formula>IF(
    OR(ISBLANK(Estimated_Wallet_Size_Overwrite__c), Estimated_Wallet_Size_Overwrite__c = 0),
    MAX(
        EWS_Fallback__c * 
        IF(
            Record_Type__c = &quot;Agency Sales&quot;, 
            0.2, 
            IF(Record_Type__c = &quot;Discarded&quot;, 0, 1)
        ),
        Bookings_Last_12_Months_Hierarchy__c 
    ),
    IF(
        Bookings_Last_12_Months_Hierarchy__c &gt; Estimated_Wallet_Size_Overwrite__c,
        Bookings_Last_12_Months_Hierarchy__c,
        Estimated_Wallet_Size_Overwrite__c
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Estimated Wallet Size is determined based on the Number of Employees, Category 3, Account Record Type, Bookings in the Last 12 Months, and the Estimated Wallet Size Overwrite.</inlineHelpText>
    <label>Estimated Wallet Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>