force-app/main/default/objects/Account/fields/Estimated_Wallet_Size_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Wallet_Size_Overwrite__c</fullName>
    <inlineHelpText>[Admin Only] Technical Helper Field to manually overwrite EWS. If this field is populated, the value will be displayed as EWS.</inlineHelpText>
    <label>Estimated Wallet Size - Overwrite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>