force-app/main/default/objects/Account/fields/Events_impacting_prioritization__c.field-meta.xml
<CustomField>
    <fullName>Events_impacting_prioritization__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Gibt es bevorstehende Ereignisse, die sich auf die Priorisierung von Rekrutierungslösungen auswirken?
Dieses Feld erfasst bevorstehende Ereignisse, die die Priorisierung von Rekrutierungslösungen bei potenziellen Kund*innen beeinflussen könnten. Es hilft bei der Identifizierung von externen und internen Faktoren, die die Entscheidungsfindung verändern können.</inlineHelpText>
    <label>Events impacting prioritization</label>
    <type>TextArea</type>
</CustomField>