force-app/main/default/objects/Account/fields/Existence_employer_branding__c.field-meta.xml
<CustomField>
    <fullName>Existence_employer_branding__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2315</description>
    <inlineHelpText>Spielt Employer Branding derzeit eine Rolle in der Rekrutierungsstrategie des Unternehmens?</inlineHelpText>
    <label>Existence employer branding</label>
    <type>Checkbox</type>
</CustomField>