force-app/main/default/objects/Account/fields/Explination__c.field-meta.xml
<CustomField>
    <fullName>Explination__c</fullName>
    <description>Serves for Sales to explain why they think the accounts needs to have it&apos;s motion reviewed.</description>
    <inlineHelpText>Please explain why you think this account needs to have it&apos;s motion reviewed.</inlineHelpText>
    <label>LegacyReasoning for motion review needed</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>