force-app/main/default/objects/Account/fields/F2F_This_Quarter__c.field-meta.xml
<CustomField>
    <fullName>F2F_This_Quarter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-2433</description>
    <inlineHelpText>Indikator, ob in diesem Quartal persönliche Treffen mit KundInnen geplant sind, um die Beziehung zu stärken und Verkaufschancen zu verbessern.</inlineHelpText>
    <label>F2F This Quarter</label>
    <type>Checkbox</type>
</CustomField>