force-app/main/default/objects/Account/fields/Facebook_Jobs_enabled__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Jobs_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this field if Facebook Jobs should be live for this client.</description>
    <inlineHelpText>Check this field if Facebook Jobs should be live for this client.</inlineHelpText>
    <label>Legacy Facebook Jobs enabled</label>
    <type>Checkbox</type>
</CustomField>