force-app/main/default/objects/Account/fields/Firmenbuch_Number__c.field-meta.xml
<CustomField>
    <fullName>Firmenbuch_Number__c</fullName>
    <description>Firmenbuch number Austria</description>
    <inlineHelpText>Firmenbuch number Austria</inlineHelpText>
    <label>Firmenbuch-Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>