force-app/main/default/objects/Account/fields/First_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>First_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-1165 / To track the first Opportunity, since the first Opportunity not always Closed Won
Used in Declarative Lookup Summaries</description>
    <label>First Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (First Opportunity)</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>