force-app/main/default/objects/Account/fields/First_Won_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>First_Won_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO-730 / Used in Declarative Rollup Summaries</description>
    <label>First Won Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Accounts (First Won Opportunity)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>