force-app/main/default/objects/Account/fields/First_Won_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Won_Opportunity_Date__c</fullName>
    <description>Requested by marketing, being populated by flow</description>
    <inlineHelpText>For marketing use</inlineHelpText>
    <label>Legacy First Won Opportunity Date</label>
    <type>Date</type>
</CustomField>