force-app/main/default/objects/Account/fields/Flexible_Budget_Selection__c.field-meta.xml
<CustomField>
    <fullName>Flexible_Budget_Selection__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this client needs flexible budget selection for the remainder of their jobs.</description>
    <label>Flexible Budget Selection</label>
    <type>Checkbox</type>
</CustomField>