force-app/main/default/objects/Account/fields/fmlCompanyBackendLink__c.field-meta.xml
<CustomField>
    <fullName>fmlCompanyBackendLink__c</fullName>
    <formula>HYPERLINK(&quot;https://production-backend.heyjobs.de/admin/advanced_companies/&quot;&amp; TEXT(txtCompanyId__c), &quot;Backend Link&quot;)</formula>
    <label>Company Backend Link</label>
    <type>Text</type>
</CustomField>