force-app/main/default/objects/Account/fields/fmlDetractor__c.field-meta.xml
<CustomField>
    <fullName>fmlDetractor__c</fullName>
    <formula>IF(dNPS__c &lt; 7, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Detractor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>