force-app/main/default/objects/Account/fields/fmlDetractorPerformance__c.field-meta.xml
<CustomField>
    <fullName>fmlDetractorPerformance__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Detractor Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>