force-app/main/default/objects/Account/fields/fmlDetractorService__c.field-meta.xml
<CustomField>
    <fullName>fmlDetractorService__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Detractor Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>