force-app/main/default/objects/Account/fields/fmlLookerLink__c.field-meta.xml
<CustomField>
    <fullName>fmlLookerLink__c</fullName>
    <formula>HYPERLINK(&quot;https://eu-west-1a.online.tableau.com/#/site/heyjobs/views/ClientPerformanceOverview/ClientPerformanceReport?Company%20ID=&quot; &amp; TEXT(txtCompanyId__c) ,&quot;Tableau Link&quot;)</formula>
    <label>Legacy Tableau Link</label>
    <type>Text</type>
</CustomField>