force-app/main/default/objects/Account/fields/fmlOne__c.field-meta.xml
<CustomField>
    <fullName>fmlOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Account Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>