force-app/main/default/objects/Account/fields/fmlPassive__c.field-meta.xml
<CustomField>
    <fullName>fmlPassive__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Passive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>