force-app/main/default/objects/Account/fields/fmlPassivePerformance__c.field-meta.xml
<CustomField>
    <fullName>fmlPassivePerformance__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Passive Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>