force-app/main/default/objects/Account/fields/fmlPromoter__c.field-meta.xml
<CustomField>
    <fullName>fmlPromoter__c</fullName>
    <formula>IF( dNPS__c  &gt; 8, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Promoter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>