force-app/main/default/objects/Account/fields/fmlPromoterService__c.field-meta.xml
<CustomField>
    <fullName>fmlPromoterService__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy - Promoter Service</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>