force-app/main/default/objects/Account/fields/Focus_this_quarter__c.field-meta.xml
<CustomField>
    <fullName>Focus_this_quarter__c</fullName>
    <description>RO-2433</description>
    <inlineHelpText>Primärer Fokusbereich für dieses Quartal, um deine Verkaufsziele zu erreichen.</inlineHelpText>
    <label>Focus (this quarter)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REACH Paket</fullName>
            </value>
            <value>
                <fullName>HIRE Paket</fullName>
            </value>
            <value>
                <fullName>REACH &amp; HIRE Pakete</fullName>
            </value>
            <value>
                <fullName>Budget einsetzen</fullName>
            </value>
            <value>
                <fullName>Reaktivierung</fullName>
            </value>
            <value>
                <fullName>dummy</fullName>
                <isActive>false</isActive>
                <label>dummy</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>