force-app/main/default/objects/Account/fields/Follow_up_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Date_Account__c</fullName>
    <description>RO-2317</description>
    <inlineHelpText>Zeitpunkt, wann dieser Account wieder aktiv angegangen werden soll. Das Follow-up Date kann entweder manuell gesetzt werden oder wird durch das Losten einer Acquisition Opp mit dem Reactivation Date überschrieben. 

Zeitpunkt, wann dieser Account wieder aktiv angegangen werden soll oder ein Termin, nächster Austausch, Follow up vereinbart wurde.</inlineHelpText>
    <label>Follow-up Date</label>
    <type>Date</type>
</CustomField>