force-app/main/default/objects/Account/fields/Follow_Up_date_is_reached__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_date_is_reached__c</fullName>
    <description>RO - 2354</description>
    <formula>Follow_up_Date_Account__c = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if the Follow-up date on account is reached.</inlineHelpText>
    <label>Follow Up date is reached_trigger</label>
    <type>Checkbox</type>
</CustomField>