force-app/main/default/objects/Account/fields/Follow_up_Details_Account__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Details_Account__c</fullName>
    <description>RO-2317</description>
    <inlineHelpText>Informationen zum Follow-up mit dem Account, z.B. Was sind die nächsten Schritte mit diesem Account?</inlineHelpText>
    <label>Follow-up Details</label>
    <type>TextArea</type>
</CustomField>