force-app/main/default/objects/Account/fields/Framework_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Framework_Contract_Amount__c</fullName>
    <label>Legacy Framework Contract Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>