force-app/main/default/objects/Account/fields/Framework_Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Framework_Contract_Signed_Date__c</fullName>
    <inlineHelpText>If a framework agreement has been signed, please enter the date of the signature in here.</inlineHelpText>
    <label>Legacy Framework Contract Signed Date</label>
    <type>Date</type>
</CustomField>