force-app/main/default/objects/Account/fields/Framework_in_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Framework_in_Discussion__c</fullName>
    <label>Legacy Framework in Discussion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Active Framework</fullName>
            </value>
            <value>
                <fullName>Framework expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>