force-app/main/default/objects/Account/fields/Framework_Opportunity_Group__c.field-meta.xml
<CustomField>
    <fullName>Framework_Opportunity_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RO - 1632</description>
    <label>Legacy Framework Opportunity Group</label>
    <referenceTo>Framework_Opportunity_Group__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>