force-app/main/default/objects/Account/fields/Funnel_areas_of_neglect__c.field-meta.xml
<CustomField>
    <fullName>Funnel_areas_of_neglect__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Welche Schritte des Rekrutierungsprozesses nehmen zu viel Zeit in Anspruch oder erzeugen nicht die gewünschten Ergebnisse?</inlineHelpText>
    <label>Funnel areas of neglect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad creation / optimization</fullName>
            </value>
            <value>
                <fullName>Cost-efficient channel selection</fullName>
            </value>
            <value>
                <fullName>Quantity (applications sent)</fullName>
            </value>
            <value>
                <fullName>Quality (qualified applicants)</fullName>
            </value>
            <value>
                <fullName>Hires</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>