force-app/main/default/objects/Account/fields/GCLID__c.field-meta.xml
<CustomField>
    <fullName>GCLID__c</fullName>
    <description>Google Ads Keyword Capture ID</description>
    <label>Legacy GCLID</label>
    <type>TextArea</type>
</CustomField>