force-app/main/default/objects/Account/fields/Groove_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Groove_Upload_Date__c</fullName>
    <description>Date of assignment of accounts for upload to Groove</description>
    <label>Legacy Groove Upload Date</label>
    <type>Date</type>
</CustomField>