force-app/main/default/objects/Account/fields/GTC_consent__c.field-meta.xml
<CustomField>
    <fullName>GTC_consent__c</fullName>
    <description>RO-1541</description>
    <inlineHelpText>Derzeit nur für AT HeyPakete-Accounts verwendet - Gibt an, wann das Konto zuletzt den allgemeinen Geschäftsbedingungen (AGBs) zugestimmt hat.</inlineHelpText>
    <label>GTC consent</label>
    <type>Date</type>
</CustomField>