force-app/main/default/objects/Account/fields/GTM_Motion_Account__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Account__c</fullName>
    <description>RO - 1958</description>
    <inlineHelpText>Das GTM Motion zeigt an, in welchem Motion (Segment) sich ein Account befindet oder zugeordnet werden sollte. Hier findest du mehr Informationen zu den GTM Motion.</inlineHelpText>
    <label>GTM Motion Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GTM_Motion_values</valueSetName>
    </valueSet>
</CustomField>