force-app/main/default/objects/Account/fields/GTM_Motion_Alignment_Helper__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Alignment_Helper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to enable &quot;motion-changing&quot; updates of related fields via flow that are restricted via validation and enable ACLS updates
RO-2177</description>
    <label>GTM Motion Alignment Helper</label>
    <type>Checkbox</type>
</CustomField>