force-app/main/default/objects/Account/fields/GTM_Motion_Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Change_Reason__c</fullName>
    <description>RO-2177</description>
    <inlineHelpText>Zeigt den Grund, warum ein Account in eine andere Motion geshiftet wurde oder werden soll. Freitextfeld zur weiteren Erläuterung des GTM Motion Change Reasons. Weitere Informationen zu den Change Reasons findest du hier: https://heyjobs.atlassian.net/wiki/spaces/ESE/pages/3322937454/GTM+Segmentation+Area+and+Motion+Account+Segmentation+V03#GTM-Motion-Change-Reasons</inlineHelpText>
    <label>GTM Motion Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Has Reach Potential</fullName>
            </value>
            <value>
                <fullName>Conditions for Expansion met</fullName>
            </value>
            <value>
                <fullName>Conditions for Retention met</fullName>
            </value>
            <value>
                <fullName>Conditions for Enterprise met</fullName>
            </value>
            <value>
                <fullName>Transactional Buying Behaviour</fullName>
            </value>
            <value>
                <fullName>Churn</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Admin Only: Updated by Loss Process</fullName>
            </value>
            <value>
                <fullName>Admin Only: Updated by Housekeeping Automation</fullName>
            </value>
            <value>
                <fullName>Admin Only: Updated by MQL/Email Labelling Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>