force-app/main/default/objects/Account/fields/GTM_Motion_Change_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>GTM_Motion_Change_Reason_Detail__c</fullName>
    <description>RO-2177</description>
    <inlineHelpText>Freitextfeld zur weiteren Erläuterung des GTM Motion Change Reasons. Weitere Informationen zu den Change Reasons findest du hier: https://heyjobs.atlassian.net/wiki/spaces/ESE/pages/3322937454/GTM+Segmentation+Area+and+Motion+Account+Segmentation+V03#GTM-Motion-Change-Reasons</inlineHelpText>
    <label>GTM Motion Change Reason Detail</label>
    <type>TextArea</type>
</CustomField>