force-app/main/default/objects/Account/fields/Heyassessment_Deactivation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Heyassessment_Deactivation_Reason__c</fullName>
    <inlineHelpText>Dieses Feld zeigt den Grund, den der Kunde für die Deaktivierung des HeyAssessments angegeben hat.</inlineHelpText>
    <label>Legacy Heyassessment Deactivation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aus Versehen</fullName>
            </value>
            <value>
                <fullName>Verstehe die Funktion nicht</fullName>
            </value>
            <value>
                <fullName>Kein Bedarf/Mehrwert</fullName>
            </value>
            <value>
                <fullName>Zu teuer</fullName>
            </value>
            <value>
                <fullName>Zu kompliziert</fullName>
            </value>
            <value>
                <fullName>Passt nicht in unseren Prozess</fullName>
            </value>
            <value>
                <fullName>Mangelndes Vertrauen in KI</fullName>
            </value>
            <value>
                <fullName>Datenschutzbedenken</fullName>
            </value>
            <value>
                <fullName>Keine Screening-Unterstützung gegeben</fullName>
            </value>
            <value>
                <fullName>Firmenrichtlinie gegen KI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>