force-app/main/default/objects/Account/fields/Heyassessment_Deactivation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Heyassessment_Deactivation_Reason_Detail__c</fullName>
    <description>Legacy</description>
    <inlineHelpText>Dieses Feld zeigt zusätzliche Details, die der Kunde für die Deaktivierung des HeyAssessments angegeben hat.</inlineHelpText>
    <label>Legacy Heyassessment Deactivation Reaso</label>
    <type>TextArea</type>
</CustomField>