force-app/main/default/objects/Account/fields/Heyassessment_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Heyassessment_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Dieses Feld gibt an, ob das HeyAssessment für diesen Kunden aktiv oder inaktiv ist.</inlineHelpText>
    <label>Legacy Heyassessment Enabled</label>
    <type>Checkbox</type>
</CustomField>