force-app/main/default/objects/Account/fields/Heyassessment_sign_up__c.field-meta.xml
<CustomField>
    <fullName>Heyassessment_sign_up__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Dieses Konto hat zugestimmt, an einem möglichen HeyAssessment-Pre-Launch-Rollout teilzunehmen.</inlineHelpText>
    <label>Legacy Heyassessment_sign_up</label>
    <type>Checkbox</type>
</CustomField>