force-app/main/default/objects/Account/fields/HeyJobs_Category__c.field-meta.xml
<CustomField>
    <fullName>HeyJobs_Category__c</fullName>
    <description>Sector in Tableau/DWH</description>
    <inlineHelpText>HeyJobs spezifische Segregation der Kund*innen, basiert auf Category 1, 2 &amp; 3. Entspricht den Sektoren in Tableau/DWH.</inlineHelpText>
    <label>HeyJobs - Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Call center</fullName>
            </value>
            <value>
                <fullName>Headhunter</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>High-End</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Temporary Employment Agencies</fullName>
            </value>
            <value>
                <fullName>Banking and Insurance</fullName>
            </value>
            <value>
                <fullName>E-commerce</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Inventory Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>