force-app/main/default/objects/Account/fields/HeyJobs_Competitor__c.field-meta.xml
<CustomField>
    <fullName>HeyJobs_Competitor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Zeigt an, ob der Account ein HeyJobs Konkurrent ist, e.g. Stepstone</inlineHelpText>
    <label>Legacy HeyJobs Competitor</label>
    <type>Checkbox</type>
</CustomField>