force-app/main/default/objects/Account/fields/HeyPaket_Status__c.field-meta.xml
<CustomField>
    <fullName>HeyPaket_Status__c</fullName>
    <description>Shows the HeyPaket Status of the Opportunity linked under Active HeyPaket.
RO-1432</description>
    <formula>TEXT( Active_HeyPaket__r.HeyPaket_Status__c )</formula>
    <inlineHelpText>Zeigt den HeyPaket-Status der mit dem aktiven HeyPaket verknüpften Opportunity an.</inlineHelpText>
    <label>HeyPaket Status</label>
    <type>Text</type>
</CustomField>