force-app/main/default/objects/Account/fields/HeyPartner__c.field-meta.xml
<CustomField>
    <fullName>HeyPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>RO-135</description>
    <label>Legacy HeyPartner</label>
    <type>Checkbox</type>
</CustomField>