force-app/main/default/objects/Account/fields/HRegister_Court__c.field-meta.xml
<CustomField>
    <fullName>HRegister_Court__c</fullName>
    <description>Court of law where the company is registered</description>
    <inlineHelpText>Court of law where the company is registered</inlineHelpText>
    <label>HRegister-Court</label>
    <length>50</length>
    <type>Text</type>
</CustomField>