force-app/main/default/objects/Account/fields/HRegister_Department__c.field-meta.xml
<CustomField>
    <fullName>HRegister_Department__c</fullName>
    <description>Department in the Handeslregister</description>
    <inlineHelpText>Department in the Handeslregister</inlineHelpText>
    <label>HRegister-Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>BSR</fullName>
            </value>
            <value>
                <fullName>GnR</fullName>
            </value>
            <value>
                <fullName>GR</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
            <value>
                <fullName>HRB</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>