force-app/main/default/objects/Account/fields/HRegister_Full__c.field-meta.xml
<CustomField>
    <fullName>HRegister_Full__c</fullName>
    <description>Concatenation of HRegister-Court, -Department and -Number for deduplication purposes / RO-200</description>
    <formula>HRegister_Court__c + &quot;_&quot; + TEXT(HRegister_Department__c) + &quot;_&quot; +  HRegister_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Concatenation of HRegister-Court, -Department and -Number for deduplication purposes</inlineHelpText>
    <label>HRegister-Full</label>
    <type>Text</type>
</CustomField>