force-app/main/default/objects/Account/fields/HRegister_Number__c.field-meta.xml
<CustomField>
    <fullName>HRegister_Number__c</fullName>
    <description>Handelregister number</description>
    <inlineHelpText>Handelregister number</inlineHelpText>
    <label>HRegister-Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>