force-app/main/default/objects/Account/fields/Hunted_By__c.field-meta.xml
<CustomField>
    <fullName>Hunted_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>We would like to analyze how Accounts convert from Pilot to Existing based on the Hunter that closed them. Populates from &quot;Auto Closed Won&quot;, only from Sales Opp RT / RO-636</description>
    <label>Hunted By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>