force-app/main/default/objects/Account/fields/Identified_Service_Country__c.field-meta.xml
<CustomField>
    <fullName>Identified_Service_Country__c</fullName>
    <description>Captures which market/country when the account is disqualified as not active in HeyJobs market.</description>
    <label>Identified Service Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>