force-app/main/default/objects/Account/fields/Implementation_timeline__c.field-meta.xml
<CustomField>
    <fullName>Implementation_timeline__c</fullName>
    <description>RO-2315</description>
    <inlineHelpText>Bis zu welchem Zeitpunkt plant das Unternehmen die Einführung einer neuen Rekrutierungslösung?
Dieses Feld gibt den geplanten Zeitpunkt an, bis zu dem potenzielle Kund*innen eine neue Rekrutierungslösung implementieren möchten. Es unterstützt die Projektplanung und die Festlegung von Meilensteinen.</inlineHelpText>
    <label>Implementation timeline</label>
    <type>Date</type>
</CustomField>